# mcp-browser

./: .env.example  .gitignore  LICENSE  PUBLISH.md  README.md  analise_extensao_necessaria.md  aprendizado_webbridge.md  extension.crx  hermes-mcp.sh  investigacao_indicadores_visuais.md  manage_mcp_browser.py  prompt_webbridge_ieducar.md  pyproject.toml  relatorio_ieducar.md  test_agent_extension.py  test_agent_login.py  test_extension_direct.py  test_extension_mode.py  test_ieducar.py  test_ieducar_advanced.py  test_login_direct.py  test_login_execute.py  test_login_existing.py  test_login_simple.py  test_mcp_extension.py  websocket_server_standalone.py  ws_client.py
.claude/skills/browser-automacao-referencia/: SKILL.md
.claude/skills/browser-mcp-arqueologia-de-falhas/: SKILL.md
.claude/skills/browser-mcp-build-e-ambiente/: SKILL.md
.claude/skills/browser-mcp-campanha-confiabilidade-do-agente/: SKILL.md  baseline-2026-07-18.md
.claude/skills/browser-mcp-campanha-confiabilidade-do-agente/scripts/: benchmark_agent.py
.claude/skills/browser-mcp-config-e-flags/: SKILL.md
.claude/skills/browser-mcp-contrato-de-arquitetura/: SKILL.md
.claude/skills/browser-mcp-controle-de-mudancas/: SKILL.md
.claude/skills/browser-mcp-diagnosticos-e-ferramentas/: SKILL.md
.claude/skills/browser-mcp-diagnosticos-e-ferramentas/scripts/: check_env.py  dump_tools.py  hash_script.py
.claude/skills/browser-mcp-executar-e-operar/: SKILL.md
.claude/skills/browser-mcp-fronteira-e-posicionamento/: SKILL.md
.claude/skills/browser-mcp-metodologia-e-prova/: SKILL.md
.claude/skills/browser-mcp-perfil-restrito/: SKILL.md
.claude/skills/browser-mcp-playbook-de-depuracao/: SKILL.md
.claude/skills/browser-mcp-validacao-e-qa/: SKILL.md
.github/workflows/: ci.yml  publish.yml
agent_output_advanced/: network_capture.har
agent_output_extension/: report.md
agent_output_login/: report.md
docs/: api.md  maturity-analysis.md
extension/: background.js  content.js  injected.js  manifest.json  popup.html  popup.js  styles.css
src/browser_mcp/: __init__.py  agent.py  browser_manager.py  extension_bridge.py  llm_client.py  network.py  restricted_profile.py  server.py  tools.py  utils.py  visual_indicator.py  websocket_server.py
tests/: test_agent.py  test_restricted_profile.py  test_smoke.py  test_tools.py
(+9 files in other folders)
