[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "browser-mcp-server"
version = "0.1.0"
description = "MCP server for browser automation with LLM agent integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">= 3.11"
authors = [
    {name = "Felipe C.", email = "felipecc@users.noreply.github.com"},
]
keywords = [
    "mcp",
    "browser",
    "automation",
    "llm",
    "playwright",
    "ai-agent",
    "model-context-protocol",
    "web-scraping",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: AsyncIO",
    "Environment :: Console",
]
dependencies = [
    "mcp>=1.0.0",
    "playwright>=1.40.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
    # cliente-só, para o utilitário de dev ws_client.py (o servidor usa asyncio puro)
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://github.com/felipecc/browser-mcp-server"
Repository = "https://github.com/felipecc/browser-mcp-server"
"Bug Tracker" = "https://github.com/felipecc/browser-mcp-server/issues"
Documentation = "https://github.com/felipecc/browser-mcp-server#readme"

[project.scripts]
browser-mcp-server = "browser_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/browser_mcp"]

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
